--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -77,7 +77,6 @@ a
     ul
     {
         list-style: none;
-        display: flex;
         align-items: center;
 
         li
@@ -92,5 +91,13 @@ a
                 text-decoration-style: wavy;
             }
         }
+    }
+}
+
+@media (min-width: 350px)
+{
+    ul
+    {
+        display: flex;
     }
 }
